second step - plugins and logging

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Andrew Turner",
   "license": "MIT",
   "dependencies": {
+    "good": "^6.3.0",
+    "good-console": "^5.0.2",
     "hapi": "^8.8.1"
   },
   "devDependencies": {
